SERVER-15012 SubplanStage must check for missing cache data